<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/holder_consultorio"
            android:textSize="16sp"
            android:id="@+id/template_list_consultorio_name" />

        <TextView
            android:id="@+id/template_list_consultorio_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textAlignment="textEnd"
            android:fontFamily="sans-serif"
            android:text="@string/holder_telefono"
            android:textSize="14sp"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/holder_direccion"
        android:textSize="14sp"
        android:fontFamily="sans-serif-thin"
        android:id="@+id/template_list_consultorio_direccion" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="12dp"
        android:background="@color/cardview_shadow_start_color" />

</LinearLayout>