<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.medicos.MedicosForm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/form_name"
            app:hintEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/form_medico_nomnbre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:singleLine="true"
                android:textSize="14dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/form_lastname"
            app:hintEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/form_medico_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:singleLine="true"
                android:textSize="14dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/form_identification"
            app:hintEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/form_medico_identificacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:inputType="number"
                android:textSize="14dp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/background_spinner"
            android:layout_margin="8dp"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/profesion" />

            <Spinner
                style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:minHeight="24sp"
                android:textSize="14dp" />
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>