<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modules.pacientes.PacientesForm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/form_name"
            app:hintEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/form_paciente_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:singleLine="true"
                android:textSize="14dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/form_lastname"
            app:hintEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/form_paciente_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:singleLine="true"
                android:textSize="14dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/form_identification"
            app:hintEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/form_paciente_identificacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:inputType="number"
                android:textSize="14dp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>